--- a/app/views/accounts/signupStudent.html.erb
+++ b/app/views/accounts/signupStudent.html.erb
@@ -147,7 +147,8 @@ ion-content {
                   <div style="position:relative;left:70px;"   >
                     <%= form.submit "Sign Up",style: "width:300px;", class: "btn-hover color-1" %>
                 </div>
-
+                <div style="text-align: center;"><a style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" href="/accounts/login">Login</a></div>
+                <br><br>
                 </ion-card>
               </ion-col>
               <ion-col></ion-col>
