--- a/app/views/mess/_add_staff.html.erb
+++ b/app/views/mess/_add_staff.html.erb
@@ -2,7 +2,7 @@
             <ion-toolbar>
               <ion-title style="text-align: center; padding-left: 70px;">Add Staff</ion-title>
               <ion-buttons slot="end">
-                <ion-button slot="icon-only" onclick="dismissModal()"><ion-icon name="close"></ion-icon></ion-button>
+                <ion-button slot="icon-only" onClick="dismissModal()"><ion-icon name="close"></ion-icon></ion-button>
               </ion-buttons>
             </ion-toolbar>
           </ion-header>
