--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -196,19 +196,20 @@
 
                     </div>
 
-                    <div id="guests" class="tabcontent" style="display:none;position: absolute;left: 60px">
+                    <div id="guests" class="tabcontent" style="display:none;">
                     <div style="text-align: center;"><h1 >MY GUESTS</h1></div>
                     <br>
                         
-                        
+                    <ion-row><ion-col offset=1 size=8>
                     <div id="s2">
                     
                     
-                    <div id="guestss" style="position: relative;left:100px;"></div>
+                    <div id="guestss" style="position: relative;left:140px;"></div>
                     
                     </div>
                     
                     <br>
+                    </ion-col></ion-row>
                     </div>
 
                     <div id="staff_list" class="tabcontent" style="display:none;">
@@ -216,9 +217,10 @@
                     <p>List of all staff goes here</p> 
                     </div>
 
-                    <div id="messcut" class="tabcontent" style="display:none;position: absolute;left: 60px">
+                    <div id="messcut" class="tabcontent" style="display:none;">
                     <div style="text-align: center;"><h1>Mess Cut Entry</h1></div>
                     <br><br>
+                    <ion-row><ion-col offset=1 size=8>
                     <ion-card style="width:900px;">
                         <br><br>
                         <ion-card-container>
@@ -264,15 +266,16 @@
                             </form>
                         </ion-card-container>
                         <br>
-                    </ion-card>
+                    </ion-card></ion-col></ion-row>
                     </div>
 
                     
-                    <div id="extra" class="tabcontent" style="display:none;position: absolute;left: 60px">
+                    <div id="extra" class="tabcontent" style="display:none;">
                     <div style="text-align: center;"><h1>MY EXTRAS</h1></div>
                         <br>
                         
-                        
+                        <ion-row><ion-col offset=1 size=8>
+
                         <div id="s1">
                         
                        
@@ -281,6 +284,7 @@
                         </div>
                         
                         <br>
+                        </ion-col></ion-row>
                     </div>
 
                     
