--- a/app/views/mess/_change_password.html.erb
+++ b/app/views/mess/_change_password.html.erb
@@ -21,6 +21,6 @@
             <ion-input type='password' id="change_password_confirm" required="true"></ion-input>
             </ion-item><br>
             <div style="text-align:center;">
-            <ion-button id="change_button" style="--ion-color-primary:  #8f15f4;self-align:center; margin-bottom: 10px;" onClick="this.innerHTML='<ion-spinner></ion-spinner>';changePassword('mess');">Change</ion-button>
+            <ion-button id="change_button" style="--ion-color-primary:  #8f15f4;self-align:center; margin-bottom: 10px;" onClick="changePassword('mess');">Change</ion-button>
             </div>
           </ion-content>
