--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -111,7 +111,7 @@ ion-content {
 
 
 
-                        <ion-segment style="--ion-color-primary: #8f15f4;" scrollable value="student">
+                        <ion-segment style="--ion-color-primary: #8f15f4;" >
         <ion-segment-button id="loginToggleInitial" onClick="loginToggle(event)" value="student" layout="icon-start">
           <ion-label>Student</ion-label>
         </ion-segment-button>
