--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -201,7 +201,7 @@
                     <div style="text-align: center;"><h1 >MY GUESTS</h1></div>
                     <br>
                         
-                    <ion-row><ion-col offset=1 size=8>
+                    <ion-row><ion-col offset=2 size=8>
                     <ion-card>
                     <ion-card-header id="y"><ion-item id="x"><ion-col>S.No</ion-col><ion-col>Guest Name</ion-col><ion-col>Student Roll No</ion-col></ion-item></ion-card-header>
                     <ion-card-content style="padding-bottom: 0px;">
@@ -236,7 +236,7 @@
                     </div>
 
                     <div id="messcut" class="tabcontent" style="display:none;">
-                    <div style="text-align: center;"><h1>Mess Cut Entry</h1></div>
+                    <div style="text-align: center;"><h1>MESS CUT ENTRY</h1></div>
                     <br><br>
                     <ion-row><ion-col offset=1 size=8>
                     <ion-card style="width:900px;">
@@ -285,14 +285,51 @@
                         </ion-card-container>
                         <br>
                     </ion-card></ion-col></ion-row>
+                        <br><br>
+                    <div style="text-align: center;"><h3>MY DETAILED MESS CUT LIST</h3></div>
+                    <ion-row><ion-col offset=2 size=8>
+                    <ion-card>
+                            <ion-card-header id="y">
+                                <ion-item id="x"><ion-col>S.No</ion-col><ion-col>From Date</ion-col><ion-col>To Date</ion-col><ion-col>No Of Days</ion-col></ion-item>
+                            </ion-card-header>
+                            <ion-card-content>
+                                <ion-list>
+                                
+                                        <% if @student.mess_cuts.count==0%>
+                                            <%= "No Mess Cuts have been recorded in this account."%>
+                                        <% else %>
+                                        <% i = 0 %>
+                                            <% @student.mess_cuts.each do |messcut| %>
+                                                <ion-item>
+                                                    <ion-col>
+                                                        &emsp;<%= i=i+1 %>
+                                                    </ion-col>
+                                                    <ion-col>
+                                                        <%= messcut.from_date.to_time.strftime("%d-%m-%Y")  %>
+                                                    </ion-col>
+                                                    <ion-col>
+                                                        <%= messcut.to_date.to_time.strftime("%d-%m-%Y")  %>
+                                                    </ion-col>
+                                                    <ion-col>
+                                                        &emsp;<%= messcut.no_of_days %>
+                                                    </ion-col>
+                                                </ion-item>
+                                            <% end %>
+                                        <% end %>
+                                            
+                                </ion-list>
+                            </ion-card-content>
+                        </ion-card>
+
+                    </ion-col></ion-row>
                     </div>
 
                     
                     <div id="extra" class="tabcontent" style="display:none;">
                     <div style="text-align: center;"><h1>MY EXTRAS</h1></div>
                         <br>
-                        
-                        <ion-row><ion-col offset=1 size=8>
+             
+                        <ion-row><ion-col offset=2 size=8>
 
                         <% i = 0 %>
                         <% sum = 0 %>
