--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -98,6 +98,8 @@
     background-color: #8f15f4;
     height: 64px;
   }   
+
+
   </style>
 </head>
 <body>
@@ -184,11 +186,12 @@
                         <div id="profile" class="tabcontent" style="display:none;">
                         
                             <ion-row>
+                            
                                 <ion-col offset=2 size=8>
-                                        <div style="text-align: center;"><h1>Personal Information</h1></div><br>
+                                        <div  style="text-align: center;"><h1>Personal Information</h1></div><br>
                             <br><br>            
-                            <div id="profile_content">
-                                <ion-spinner></ion-spinner>
+                            <div id="profile_content" >
+                                <ion-spinner ></ion-spinner>
                             </div>
                                 </ion-col>
                             </ion-row>
@@ -288,6 +291,7 @@
                         <br><br>
                     <div style="text-align: center;"><h3>MY DETAILED MESS CUT LIST</h3></div>
                     <ion-row><ion-col offset=2 size=8>
+                    <div id="p">
                     <ion-card>
                             <ion-card-header id="y">
                                 <ion-item id="x"><ion-col>S.No</ion-col><ion-col>From Date</ion-col><ion-col>To Date</ion-col><ion-col>No Of Days</ion-col></ion-item>
@@ -320,7 +324,7 @@
                                 </ion-list>
                             </ion-card-content>
                         </ion-card>
-
+                    </div>
                     </ion-col></ion-row>
                     </div>
 
