--- a/app/views/mess/_student_data.html.erb
+++ b/app/views/mess/_student_data.html.erb
@@ -1,5 +1,5 @@
   <ion-header translucent>
-            <ion-toolbar>
+            <ion-toolbar color='primary' style="--ion-color-primary: #8f15f4;">
               <ion-title id="student_data_modal_title" style="text-align: center;"></ion-title>
             </ion-toolbar>
           </ion-header>
