--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -212,7 +212,7 @@ display: none !important;
                             <ion-item lines='none' class="side_tabs" onClick="viewOptionMess(event,'guest')">
                                 <div style="height: 57px;">
                                     <a>
-                                        <ion-icon name="beer-outline" class="side_icons"></ion-icon>
+                                        <ion-icon name="person-add-outline" class="side_icons"></ion-icon>
                                         <label class="side_label">ADD GUEST</label>
                                     </a>
                                 </div>
