--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -298,8 +298,8 @@
                             <ion-card-header id="y">
                                 <ion-item id="x"><ion-col>S.No</ion-col><ion-col>From Date</ion-col><ion-col>To Date</ion-col><ion-col>No Of Days</ion-col></ion-item>
                             </ion-card-header>
-                            <ion-card-content>
-                                <ion-list>
+                            <ion-card-content style='padding-bottom: 0px;'>
+                                <ion-list style='padding-bottom: 0px;'>
                                 
                                         <% if @student.mess_cuts.count==0%>
                                             <%= "No Mess Cuts have been recorded in this account."%>
