--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -111,7 +111,7 @@ ion-content {
 
 
 
-                        <ion-segment style="--ion-color-primary: #8f15f4;" >
+                        <ion-segment style="--ion-color-primary: #8f15f4;" value="student">
         <ion-segment-button id="loginToggleInitial" onClick="loginToggle(event)" value="student" layout="icon-start">
           <ion-label>Student</ion-label>
         </ion-segment-button>
@@ -127,7 +127,7 @@ ion-content {
                 <div style="text-align: center;"><p id=”alert”><%= flash.alert %></p></div>
 
                 <div id="studentLogin">
-                <%= form_with scope: :student, url: authenticate_path, remote: true do |form| %>
+                <%= form_with scope: :student, url: authenticate_path, local: true do |form| %>
                 <ion-row><ion-col size=12 offset=1.7><ion-list lines="none">
 
                
