--- a/app/views/mess/dashboard.html.erb
+++ b/app/views/mess/dashboard.html.erb
@@ -272,9 +272,9 @@ display: none !important;
                     
                     
                   
-                     <div style="text-align: center;"><h1 >ADD GUEST</h1></div><br> <br>
-                     <ion-row><ion-col size=4 offset=2.5>
-                         <ion-card style = "width: 700px">
+                     <ion-row><ion-col size=6 offset=1><br>
+                        <div style="text-align: center;"><h2 >ADD GUEST</h2></div><br>
+                         <ion-card>
                           <form >  
                             <ion-card-content>
                             <ion-list lines="none" class="line-input">
@@ -325,9 +325,9 @@ display: none !important;
                     <div id="student_list" class="tabcontent" style="display:none;">
                         <ion-grid>
                             <ion-row>
-                                <ion-col size=5 offset=3>
-                                    <h3 style="text-align: center; padding-right:34px">STUDENT LIST</h3><br>
-                                    <ion-row><ion-col size=6>
+                                <ion-col size=5 offset=2><br>
+                                    <h2 style="text-align: center;">STUDENT LIST</h2><br>
+                                    <ion-row><ion-col size=5>
                                     <ion-searchbar placeholder="Type Name" id="nameSearchBar_list_student"  onInput="filterStudentsByName('list_student')"></ion-searchbar></ion-col>
                                     <ion-col size=6>
                                     <ion-searchbar placeholder="Type Roll No" id="rollSearchBar_list_student" onInput="filterStudentsByRollNo('list_student')"></ion-searchbar></ion-col>
@@ -341,9 +341,9 @@ display: none !important;
                     <div id="staff_list" class="tabcontent" style="display:none;">
                         <ion-grid>
                     <ion-row>
-                        <ion-col offset=3 size=5>
-                            <h3 style="text-align: center;">STAFF LIST
-                            </h3><br>
+                        <ion-col offset=2 size=5><br>
+                            <h2 style="text-align: center;">STAFF LIST
+                            </h2><br>
                                 <div style="text-align: center;"><ion-button style="--ion-color-primary: #8f15f4;margin-right: 10px" id="addbutton" onClick="addStaffModal()">Add Staff<ion-icon slot="end" name='add'></ion-icon></ion-button></div>
                             <div id="stafflist"><ion-spinner style="position:relative; left: 50px; top:70px"></ion-spinner></div>
 
@@ -356,9 +356,9 @@ display: none !important;
                     <div id="messcut" class="tabcontent" style="display:none;">
                     <ion-row>
                    
-                    <ion-col offset=2 size=8>
+                    <ion-col offset=1 size=8><br>
                     <div style="text-align: center;"><h3>MESS CUT: DETAILED LIST</h3></div><br>
-                    <br>
+                    
                     <div id="mess_cut_area">
                     <div  style="text-align: center;"><small id="blink"><b>Select a date for a Sorted List</b></small></div>
                       <ion-row>
@@ -409,9 +409,10 @@ display: none !important;
                         
                         
                         
-                            <div style="text-align: center;"><h1>ADD EXTRA</h1></div><br><br>
-                            <ion-row><ion-col size=4 offset=2.5> 
-                        <ion-card style = "width: 700px">
+                            <ion-row><ion-col size=6 offset=1> <br>
+                            <div style="text-align: center;"><h2>ADD EXTRA</h2></div><br>
+
+                        <ion-card>
                           <form id="myform">  
                           
                             <ion-card-content>
@@ -462,10 +463,10 @@ display: none !important;
                    
 
                    <div id="fee" class="tabcontent" style="display:none;">
-                    <ion-row><ion-col offset=2 size=8>
-                    <div style="text-align: center;"><h3>MONTHLY MESS FEE</h3></div><br>
+                    <ion-row><ion-col offset=1 size=8><br>
+                    <div style="text-align: center;"><h2>MONTHLY MESS FEE</h2></div>
 
-                    <br><br>
+                    <br>
                     <% if @mess.students.count == 0%>
                         <div style="text-align: center;"><%= "The Mess is Empty!"%></div>
                     <% else %>
